--- a/tests/LEDS_SWITCHES_BRAMS/leds_switches_brams.cfg
+++ b/tests/LEDS_SWITCHES_BRAMS/leds_switches_brams.cfg
@@ -6,35 +6,34 @@
   )
 
   (ip "leds"
-    (range #x0 #x0)
+    (range x0 x0)
     (reg "control"
-      (address #x0)
-      (init #x0)
+      (address 0x0)
+      (init 0x0)
     )
   )
 
   (ip "switches"
-    (range #x1 #x1)
+    (range 0x1 0x1)
     (reg "control"
-      (address #x1)
-      (init #x0)
+      (address 0x1)
+      (init 0x0)
     )
   )
 
   (ip "bram1"
-    (range #x2 #x101)
+    (range 0x2 0x101)
     (is_bram true)
   )
 
   (ip "bram2"
-    (range #x102 #x201)
+    (range 0x102 0x201)
     (is_bram true)
   )
 
   (ip "robot"
     (range 0x202 0x203)
     (reg "control"
-      (size 5)
       (address 0x202)
       (init 0xdeadbeef)
       (bit 0
@@ -56,18 +55,15 @@
     )
     (reg "status"
       (address 0x203)
-      (init 0x00000001)
+      (init 0x0)
       (bit 0
         (name "stopped")
-        (sampling "robot_stopped")
       )
       (bit 1
         (name "failure")
-        (sampling "robot_failure")
       )
       (bitfield 2..31
         (name "loch")
-        (sampling "robot_loch")
       )
     )
 
