access to Switch IP test works.

--- a/tests/LEDS_SWITCHES_BRAMS/leds_switches_brams.cfg
+++ b/tests/LEDS_SWITCHES_BRAMS/leds_switches_brams.cfg
@@ -6,7 +6,7 @@
   )
 
   (ip "leds"
-    (range x0 x0)
+    (range 0x0 0x0)
     (reg "control"
       (address 0x0)
       (init 0x0)
@@ -15,9 +15,10 @@
 
   (ip "switches"
     (range 0x1 0x1)
-    (reg "control"
+    (reg "switches"
       (address 0x1)
-      (init 0x0)
+      (sampling "sig_switches")
+      (init 0xcafebabe)
     )
   )
 
@@ -35,6 +36,7 @@
     (range 0x202 0x203)
     (reg "control"
       (address 0x202)
+      (size 5)
       (init 0xdeadbeef)
       (bit 0
         (name "go")
@@ -58,12 +60,15 @@
       (init 0x0)
       (bit 0
         (name "stopped")
+        (sampling "robot_stopped")
       )
       (bit 1
         (name "failure")
+        (sampling "robot_failure")
       )
       (bitfield 2..31
         (name "loch")
+        (sampling "robot_loch")
       )
     )
 
